Beginn des Kapitels 10
git-svn-id: https://svn.lug-jena.de/uni-skripte@2148 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -3256,6 +3256,45 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \end{pmatrix}\rangle$
 \end{bsp}
 
+\chapter{Gruppenoperationen}
+\begin{defini}[Operation]
+  Eine \highl{Linksoperation}\index{Operation} einer Gruppe $G$ auf einer
+  Menge $\Omega$ ist eine Abbildung $G\times\Omega\rightarrow\Omega$ mit
+  $(g,\omega)\mapsto^{g}\omega$ mit folgenden Eigenschaften:
+  \begin{itemize}
+   \item $^{1}\omega=\omega$
+   \item $^{a}(^{b}\omega)= ^{ab}\omega$ für alle $a,b\in G, \omega\in\Omega$.
+    Man sagt auch $G$ operiert auf $\Omega$ oder $\Omega$ ist eine $G$"~Menge.
+  \end{itemize}
+\end{defini}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item Rechtsoperationen definiert man analog als Abbildungen
+    $G\times\Omega\rightarrow\Omega$ mit $(\omega,g)\mapsto\omega^{g}$.
+   \item Man beachte die Analogie zur Multiplikation von Vektoren eines
+    Vektorraums mit Skalaren eines Körpers.
+  \end{enumerate}
+\end{bemerk}
+
+\begin{bsp}
+  \begin{enumerate}
+   \item Für jede Menge $\Omega$ operiert $\Sym(\Omega)$ auf $\Omega$ durch
+    $^{g}\omega\coloneq g(\omega)$. Dabei ist $g\in\Sym(\Omega)$ und
+    $\omega\in\Omega$.
+   \item Für jeden Körper $K$ und jeden $K$"~Vektorraum $V$ operiert
+    \begin{gather*}
+      \GL(V)= \{f\colon V\rightarrow V\colon f \text{ linear und bijektiv}\}
+    \end{gather*}
+    auf $V$ durch $^{g}v\coloneq g(v)$ mit $g\in\GL(V)$ und $v\in V$.
+   \item Für eine natürliche Zahl $n$ und jeden Körper $K$ operiert $\GL(n,K)$
+    auf $K^{n\times n}$ durch $^{A}B\coloneq ABA^{-1}$.
+   \item Für $m,n\in\N$ und jeden Körper $K$ operiert $\GL(m,K)\times\GL(n,K)$
+    auf $K^{m\times n}$  durch $^{(A,B)}C\coloneq ACB^{-1}$.
+   \item \todo{hier weiter}
+  \end{enumerate}
+\end{bsp}
+
 
 \todo[inline]{fehlende Vorlesungen einfuegen}
 %Vorlesung vom 2009-05-09
@@ -3591,6 +3630,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \end{bemerk}
 
 
+\todo[inline]{Vorlesung vom 2009-06-16}
 
 
 
