--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -3598,7 +3598,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \end{satz}
 
 % satz 11.3
-\begin{satz}
+\begin{satz}\label{satz:113}
   Für jede Primzahl $p$ und jede endliche $p$"~Gruppe gilt:
   \begin{enumerate}
    \item $\abs{G\colon Z(G)}\neq p$
@@ -3631,10 +3631,186 @@ Codierungstheorie, \textsc{Banach}räume etc.
 
 
 \todo[inline]{Vorlesung vom 2009-06-16}
+%Vorlesung vom 2009-06-18
+%satz 11.9
+\begin{satz}
+  Für $p,q,r\in\PP$ und jede endliche Gruppe $G$ gilt:
+  \begin{enumerate}
+   \item $\abs{G}= p^{a}q$
+   \item $\abs{G}= p^{2}q^{2}$
+   \item $\abs{G}= pqr$
+  \end{enumerate}
+  Alle Gruppen $G$ sind auflösbar.
+  \begin{proof}
+    \begin{enumerate}
+     \item \todo{Beweis zum ersten Punkt nachtragen}
+     \item \OE sei $p>q$. Existiert ein Normalteiler $1\neq N\neq G$, dann
+      sind $N,G/N$ nach dem ersten Teil auflösbar. Also ist auch $G$
+      auflösbar. Daher sei $G$ einfach. Für $P\in\Syl_{p}(G)$ ist
+      $\abs{\Syl_{p}(G)}=\abs{G\colon N_{G}(P)}\equiv1\pmod{p}$ und
+      $\abs{G\colon N_{G}(P)}\mid q^{2}$. Die Fälle $\abs{G\colon
+      N_{G}(P)}\in\{1,q\}$ sind unmöglich. Daher ist $\abs{G\colon
+      N_{G}(P)}=q^{2}$. Ist $P_{1}\cap P_{2}=1$ für je zwei verschiedene
+      $P_{1}, P_{2}\in\Syl_{p}(G)$, so folgt aus der Übungsaufgabe~42: $q^{2}=
+      \abs{\Syl_{p}(G)}\equiv1\pmod{p^{2}}$. \lightning{} Somit existieren
+      $P_{1}, P_{2}\in\Syl_{p}(G)$ mit $1<D\coloneq P_{1}\cap P_{2}<P_{1}$.
+      Für $i=1,2$ ist $\abs{P_{i}}=p^{2}$, d.\,h. $P_{i}$ ist nach
+      \autoref{satz:113} abelsch. Insbesondere ist $D\unlhd P_{i}$ und
+      $P_{i}<N_{G}(D)<G$. Somit muss $\abs{N_{G}(D)}=p^{2}q$ gelten. Nach der
+      Aufgabe~38 ist $N_{G}(D)\unlhd G$. \lightning{} da $G$ einfach.
+     \item \OE sei $p>q>r$, sonst kommen die obigen Fälle ins Spiel und weiter
+      sei $G$ einfach. Für $P\in\Syl_{p}(G)$ ist dann $\abs{\Syl_{p}(G)}=
+      \abs{G\colon N_{G}(P)}\equiv1\pmod{p}$ und $\abs{G\colon N_{G}(P)}\mid
+      qr$, also $\abs{\Syl_{p}(G)}=qr$. Analog haben wir
+      $\abs{\Syl_{q}(G)}\geq p, \abs{\Syl_{r}(G)}\geq q$. Da sich je zwei
+      Sylowgruppen trivial schneiden, enthält $G$ genau $(p-1)qr$~Elemente der
+      Ordnung $p$, mindestens $p(q-1)$~Elemente der Ordnung $q$ und mindestens
+      $q(r-1)$~Elemente der Ordnung $r$. Also $pqr= \abs{G}\geq1+qr(p-1)+
+      p(q-1)+ q(r-1)= pqr+(p-1)(q-1)$\lightning{}
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+\begin{bsp}
+  Es folgt aus den Überlegungen leicht, dass Gruppen der Ordnungen 1 bis 59
+  auflösbar. Es ist 60 die kleinste Ordnung einer nichtauflösbaren Gruppe.
+\end{bsp}
+
+\chapter{Symmetrische Gruppen}
+
+%bem 12.1
+\begin{bemerk}
+  Sei $n\in\N$. Elemente in der symmetrischen Gruppe des Grades $n$ schreibt
+  man in der Form $g=
+  \begin{pmatrix}
+    1 & 2 & \dotso & n\\
+    g(1) & g(2) & \dotso & g(n)
+  \end{pmatrix}$. Existieren paarweise verschiedene $x_{1},\dotsc,
+  x_{k}\in\{1,\dotsc,n\}$ mit $g(x_{1})=x_{2}, g(x_{2})= x_{3},\dotsc,
+  g(x_{k-1})= x_{k}, g(x_{k})=1$ und $g(y)=y$, so heißt $g$ ein
+  \highl{$k$"~Zyklus} oder \highl{Zyklus} der \highl{Länge} $k$. Man schreibt
+  $g=(x_{1},\dotsc, x_{k})=(x_{2},\dotsc, x_{k},x_{1})= (x_{k}, x_{1},\dotsc,
+  x_{k-1})$.
+
+  Zyklen $(x_{1},\dotsc, x_{k}), (y_{1},\dotsc, y_{l})$ mit $\{x_{1},\dotsc,
+  x_{k}\}\cap\{y_{1},\dotsc, y_{l}\}=\emptyset$ heißen
+  \highl{disjunkt}\index{Zyklus!disjunkter}. Gegebenenfalls sind sie
+  vertauschbar. Offenbar kann man jede Permutation  $a\in\Sym(n)$ als Produkt
+  disjunkter Zyklen schreiben:
+  \begin{gather*}
+    \begin{pmatrix}
+      1 & 2 & 3 & 4 & 5 & 6 &  7 & 8 & 9 & 10 & 11 & 12\\
+      8 & 4 & 9 & 5 & 2 & 6 &  3 & 1 & 10  & 7 & 12 & 11
+    \end{pmatrix}= (1,8)(2,4,5)(3,9,10,7)(6)(11,12)
+  \end{gather*}
+  Dabei liefern die auftretenden Zyklen die Bahnen von der zyklischen Gruppe,
+  die von $a$ erzeugt wird ($\langle a\rangle$) auf $\{1,\dotsc,n\}$. Bis auf
+  die Reihenfolge der Zyklen und Zyklen der Länge 1 ist die
+  \highl{Zyklenschreibweise} eindeutig. Wir ordnen in der Regel die
+  auftretenden Zyklenlängen $k_{1},\dotsc, k_{l}$ der Größe nach. Dann gilt:
+  $k_{1}+\dotsb+ k_{l}=n$ und $(k_{1},\dotsc, k_{l})$ heißt \highl{Typ} von
+  $a$. Offenbar ist $\abs{\langle a\rangle}= \text{kgV}(k_{1},\dotsc, k_{l})$.
+\end{bemerk}
+
+\begin{satz}\label{satz:121}
+  Zwei Elemente in $\Sym(n)$ sind genau dann konjugiert, wenn sie den gleichen
+  Typ haben.
+  \begin{proof}
+    Für die Richtung "`$\Rightarrow$"' sei $a\in\Sym(n)$ mit
+    Zyklenschreibweise: $a=(x_{1},\dotsc, x_{k})(y_{1},\dotsc, y_{l})\dotso $.
+    Für $g\in\Sym(n)$ ist dann $gag^{-1}= (g(x_{1}),g(x_{2}),\dotsc,g(x_{k}))
+    (g(y_{1}),\dotsc,g(y_{l}))$. Denn beispielsweise ist
+    $(gag^{-1})(g(x_{1}))= (ga)(x_{1})= g(x_{2})$.
+
+    Die Rückrichtung erhalten wir durch $a,a'\in\Sym(n)$ mit
+    Zyklenschreibweise: $a=(x_{1},\dotsc, x_{k})(y_{1},\dotsc, y_{l})\dotso $
+    und $a'=(x_{1}',\dotsc,x_{k}')(y_{1}',\dotsc,y_{l}')\dotso $. Dann ist
+    $gag^{-1}=a'$ mit $
+    \begin{pmatrix}
+      x_{1} & \dotso & x_{k} & y_{1} & \dotso &  y_{l} & \dotso \\
+      x_{1}'& \dotso & x_{k}'& y_{1}'& \dotso & y_{l}' & \dotso 
+    \end{pmatrix}$.
+  \end{proof}
+\end{satz}
+
+% def 12.2
+\begin{defini}[Partition]
+  Sei $n$ eine natürliche Zahl. Eine \highl{Partition} von $n$ ist eine
+  endliche Folge $(k_{1},\dotsc, k_{l})\in\N^{l}$ mit $k_{1}\geq
+  k_{2}\geq\dotsb\geq k_{l}$ und $k_{1}+\dotsb+ k_{l}=n$. 
+\end{defini}
+
+\begin{bemerk}
+  Der \autoref{satz:121} liefert eine Bijektion zwischen der Menge der
+  Konjugationsklassen von $\Sym(n)$ und der Menge der Partitionen von $n$.
+\end{bemerk}
+
+\begin{bsp}
+  $5= 4+1=3+2=3+1+1=2+2+1=2+1+1+1= 1+1+1+1+1$. Daher hat $\Sym(5)$ die
+  Klassenzahl~$7$.
+\end{bsp}
+
+\begin{satz}
+  Sei $k_{1},\dotsc, k_{l}$ eine Partition von $n$ und
+  $m_{i}\coloneq\abs{\{j\colon kj=i\}}$ für $i=1,\dotsc,n$. Unter den Zahlen
+  $k_{1},\dotsc, k_{l}$ treten also $m_{1}$~Einsen, $m_{2}$~Zweien usw.\,auf.
+  Dann hat die Konjugationsklasse der Elemente vom Typ $(k_{1},\dotsc, k_{l}$
+  in $\Sym(n)$ die Länge:
+  \begin{gather*}
+    \frac{n!}{m_{1}! 1^{m_{1}} m_{2}! 2^{m_{2}}\cdot\dotso \cdot m_{n}!
+      n^{m_{n}}}
+  \end{gather*}
+  \begin{proof}
+    Jedes Element vom Typ $k_{1},\dotsc, k_{l}$ hat die Form: $m_{1}$
+    Einszyklen, $m_{2}$ Zweizyklen usw. Es gibt $n!$ Möglichkeiten, die Zahlen
+    $1,\dotsc,n$ auf die Positionen zu verteilen. Dabei liefern jeweils
+    $m_{1}! 1^{m_{1}} m_{2}!2^{m_{2}}\dotso $ Verteilungen die gleiche
+    Permutation.
+  \end{proof}
+\end{satz}
+
+%bem 12.3
+\begin{bemerk}
+  Offenbar wird $\Sym(n)$ von allen Zyklen erzeugt. Wegen $(x_{1},\dotsc,
+  x_{k})= (x_{1},x_{k})(x_{1},x_{k-1})\dotso (x_{1},x_{2})$ wird $\Sym(n)$
+  auch von den 2"~Zyklen (oder \highl{Transposition}en) erzeugt. Wegen $(i,j)=
+  (1,i)(1,j)(1,i)$ genügen sogar die Transpositionen
+  $(1,2),(1,3),\dotsc,(1,n)$. Wegen $(1,i)= (i-1,i)\dotso
+  (2,3)(1,2)(2,3)\dotso (i-1,i)$ genügen analog auch die so genannten
+  \highl{Basistransposition}en $(1,2),(2,3),\dotsc,(n-1,n)$. Wegen $(i,i+1)=
+  (1,2,\dotsc,n)(i-1,i)(1,2,\dotsc,n)^{-1}$ gilt auch $\Sym(n)= \langle(1,2),
+  (1,2,\dotsc,n)\rangle$.
+\end{bemerk}
+
+\begin{defini}[Inversion]
+  Sei $g\in\Sym(n)$. Dann heißt ein Paar $(i,j)\in\N\times\N$ mit $1\leq
+  i<j\leq n$ und $g(i)>g(j)$ \highl{Inversion} oder \highl{Fehlstand} von $g$.
+  Die Anzahl $l(g)$ aller Inversionen von $g$ heißt \highl{Länge} von $g$.
+\end{defini}
 
 
+\begin{satz}
+  Jedes $g\in\Sym(n)$ kann man als Produkt von $l(g)$ Basistranspositionen,
+  aber nicht als Produkt von weniger als $l(g)$ Basistranspositionen schreiben.
+  \begin{proof}
+    Wir geben hier nur ein Beispiel an: Sei $g=
+    \begin{pmatrix}
+      1 & 2 & 3 & 4\\
+      2 & 3 & 1 & 4
+    \end{pmatrix}\Rightarrow l(g)= 2$. Es ist $(1,2)g=
+    \begin{pmatrix}
+      1 & 2 & 3 & 4\\
+      1 & 3 & 2 & 4
+    \end{pmatrix}\Rightarrow l((1,2)g)=1$. Für $(2,3)(1,2)g=
+    \begin{pmatrix}
+      1 & 2 & 3 & 4\\
+      1 & 2 & 3 & 4
+    \end{pmatrix}=1\Rightarrow g=(1,2)(2,3)$.
 
-
+    Allgemein erhöht/""erniedrigt sich die Multiplikation mit einer
+    Basistransposition die Anzahl der Inversionen um 1.
+  \end{proof}
+\end{satz}
 
 
 
