fehlende Verweise zu Satz 10.5 eingebaut
git-svn-id: https://svn.lug-jena.de/uni-skripte@2153 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -3685,7 +3685,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \end{enumerate}
   \begin{itemize}
    \item[(1)$\Rightarrow$(2)] Sei (1) erfüllt und $\omega\in\Omega$ beliebig.
-    Nach dem Satz 10.5\todo{Verweis zu Satz 10.5 einfuegen}  ist
+    Nach dem \autoref{satz:105}  ist
     $G/\Stb_{G}(\omega)\rightarrow\Omega$ mit
     $g\Stb_{G}(\omega)\mapsto^{g}\omega$ bijektiv. Insbesondere haben wir:
     $\abs{G\colon\Stb_{G}(\omega)}=\abs{\Omega}\geq2$, d.\,h. ist
@@ -3753,16 +3753,17 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \begin{bemerk}
   Jede Gruppe $G$ operiert auf sich selbst durch \highl{Konjugation}:
   $^{g}x=gxg^{-1}$ für alle $g,x\in G$. Dabei heißt $\Orb_{G}(x)=
-  \{gxg^{-1}\colon g\in G\}$ \highl{Konjugationsklasse} von $x$ in $G$. Liegen
-  zwei Elemente $x,y\in G$ in der gleichen Konjugationsklasse, d.\,h.
-  existiert ein $g\in G$ mit $y=gxg^{-1}$, dann heißen $x$ und $y$
-  \highl{konjugiert} in $G$. Wir schreiben hierfür $x\sim_{g}y$ oder $x\sim
-  y$. Für $x\in G$ heißt der Stabilisator $\Stb_{G}(x)= \{g\in G\colon
-  gxg^{-1}=x\}= \{g\in G\colon gx=xg\}=\colon C_{G}(x)$ der
-  \highl{Zentralisator} von $x$ in $G$. Nach dem Satz 10.5\todo{Verweis
-  einfuegen} enthält die Konjugationsklasse von $x$ in $G$ genau $\abs{G\colon
-  C_{G}(x)}$ Elemente. Ist $R$ ein Repräsentantensystem für die
-  Konjugationsklassen, so erhält die Bahnengleichung die Form:
+  \{gxg^{-1}\colon g\in G\}$ \highl{Konjugationsklasse} von $x$ in
+  $G$. Liegen zwei Elemente $x,y\in G$ in der gleichen
+  Konjugationsklasse, d.\,h.  existiert ein $g\in G$ mit $y=gxg^{-1}$,
+  dann heißen $x$ und $y$ \highl{konjugiert} in $G$. Wir schreiben
+  hierfür $x\sim_{g}y$ oder $x\sim y$. Für $x\in G$ heißt der
+  Stabilisator $\Stb_{G}(x)= \{g\in G\colon gxg^{-1}=x\}= \{g\in
+  G\colon gx=xg\}=\colon C_{G}(x)$ der \highl{Zentralisator} von $x$
+  in $G$. Nach dem \autoref{satz:105} enthält die Konjugationsklasse
+  von $x$ in $G$ genau $\abs{G\colon C_{G}(x)}$ Elemente. Ist $R$ ein
+  Repräsentantensystem für die Konjugationsklassen, so erhält die
+  Bahnengleichung die Form:
   \begin{gather}
     \label{eq:111}
        \abs{G}= \sum_{x\in R} \abs{G\colon C_{G}(x)}
