--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -199,7 +199,7 @@
 \DeclareMathOperator{\Stb}{Stb}           % Stabilisator
 \DeclareMathOperator{\Fix}{Fix}           % Fixpunkt
 \DeclareMathOperator{\Orb}{Orb}           % Orbit, Bahn
-\DeclareMathOperator{Syl}{Syl}            % Sylowgruppe
+\DeclareMathOperator{\Syl}{Syl}            % Sylowgruppe
 
 
 % Operator \bigtimes definiert
