--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -3942,8 +3942,9 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \begin{gather*}
     \begin{pmatrix}
       1 & 2 & 3 & 4 & 5 & 6 &  7 & 8 & 9 & 10 & 11 & 12\\
-      8 & 4 & 9 & 5 & 2 & 6 &  3 & 1 & 10  & 7 & 12 & 11
-    \end{pmatrix}= (1,8)(2,4,5)(3,9,10,7)(6)(11,12)
+      8 & 4 & 9 & 5 & 2 & 6 &  3 & 1 & 10  & 7 & 12 & 11\\
+    \end{pmatrix}
+       = (1,8)(2,4,5)(3,9,10,7)(6)(11,12)
   \end{gather*}
   Dabei liefern die auftretenden Zyklen die Bahnen von der zyklischen Gruppe,
   die von $a$ erzeugt wird ($\langle a\rangle$) auf $\{1,\dotsc,n\}$. Bis auf
