Anpassungen im Header
- Es heißt _set_defaultenum
- Wenn Matrizen bei pmatrix mehr als 10 Spalten enthalten, muss der Wert
  "MaxMatrixCols" angepasst werden


git-svn-id: https://svn.lug-jena.de/uni-skripte@2156 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -16,7 +16,7 @@
                    % Befehle oder solche, die man nicht in LaTeX verwenden
                    % soll -- l2tabu-Checker in LaTeX
 
-%\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
+\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
                    % Trennmuster, diese korrigieren einige Fehler der alten
                    % und bieten mehr Trennstellen
 
@@ -212,8 +212,12 @@
 \newcommand*{\dotcup}{\ensuremath{\mathaccent\cdot\cup}}
 
 % Herr Kuelshammer nummeriert mit (i), (ii), ...
-% bei paralist muss das per \defaultenum eingestellt werden
-\defaultenum{(i)}{}{}{}
+% bei paralist muss das per \setdefaultenum eingestellt werden
+\setdefaultenum{(i)}{}{}{}
+
+% Die Umgebung pmatrix kann standardmäßig nur 10 Spalten darstellen. Unten
+% wird der Zähler hochgesetzt, da es in der Vorlesung eine größere Matrix gab.
+\setcounter{MaxMatrixCols}{13}
 
 \makeindex
 
@@ -3942,8 +3946,8 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \begin{gather*}
     \begin{pmatrix}
       1 & 2 & 3 & 4 & 5 & 6 &  7 & 8 & 9 & 10 & 11 & 12\\
-      8 & 4 & 9 & 5 & 2 & 6 &  3 & 1 & 10  & 7 & 12 & 11\\
-    \end{pmatrix}
+      8 & 4 & 9 & 5 & 2 & 6 &  3 & 1 & 10 & 7 & 12 & 11
+    \end{pmatrix}\\
        = (1,8)(2,4,5)(3,9,10,7)(6)(11,12)
   \end{gather*}
   Dabei liefern die auftretenden Zyklen die Bahnen von der zyklischen Gruppe,
