Operator Signum hinzu
git-svn-id: https://svn.lug-jena.de/uni-skripte@2158 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -199,7 +199,8 @@
 \DeclareMathOperator{\Stb}{Stb}           % Stabilisator
 \DeclareMathOperator{\Fix}{Fix}           % Fixpunkt
 \DeclareMathOperator{\Orb}{Orb}           % Orbit, Bahn
-\DeclareMathOperator{\Syl}{Syl}            % Sylowgruppe
+\DeclareMathOperator{\Syl}{Syl}           % Sylowgruppe
+\DeclareMathOperator{\sgn}{sgn}           % Signum
 
 
 % Operator \bigtimes definiert
