Korrekturen am Text
Groesstenteils wurden kosmetische Maengel und offensichtliche Fehler behoben.
Die korrektur ging bis Beispiel 3.4


git-svn-id: https://svn.lug-jena.de/uni-skripte@2160 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -464,8 +464,8 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \end{defini}
 
 \begin{defini}[Halbgruppe, Monoid]
-  Die Menge $M$ heißt genau dann \highl{Halbgruppe}, wenn $(xy)z= x(yz)$ und
-  ein \highl{Monoid}, wenn $M$ eine Halbgruppe mit neutralem Element ist.
+  Die Menge $M$ heißt genau dann \highl{Halbgruppe}, wenn $(xy)z= x(yz)$ gilt
+  und \highl{Monoid}, wenn $M$ eine Halbgruppe mit neutralem Element ist.
 \end{defini}
 
 \begin{bsp}
@@ -512,7 +512,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   Monoid bezüglich der Matrixmultiplikation $K^{n\times n}$ mit der
   Einheitsmatrix als natürliches Element, dass eine Matrix $A\in
   K^{n\times n}$ invertierbar ist, wenn $A$ eine reguläre Matrix ist,
-  d.\,h. die Matrix von $A$ ist ungleich $0$. In der linearen Algebra
+  d.\,h. die Determinante von $A$ ist ungleich $0$. In der linearen Algebra
   impliziert die Linksinvertierbarkeit auch die
   Rechtsinvertierbarkeit.
 \end{bsp}
@@ -542,7 +542,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
     alle $a,b\in M$ gilt: $f(ab)=f(a)f(b)$.
    \item $f$ Monomorphismus $\Leftrightarrow f$  injektiver Homomorphismus
    \item $f$ Epimorphismus $\Leftrightarrow f$ surjektiver Homomorphismus
-   \item $f$ Isomorphismus $\Leftrightarrow f$ injektiver Homomorphismus
+   \item $f$ Isomorphismus $\Leftrightarrow f$ bijektiver Homomorphismus
    \item $f$ Endomorphismus $\Leftrightarrow f$ Homomorphismus und $M=N$
    \item $f$ Automorphismus $\Leftrightarrow f$ bijektiver Endomorphismus
   \end{enumerate}
@@ -558,7 +558,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
     $\det\colon(K^{n\times n},\cdot)\rightarrow(K,\cdot)$ ein Homomorphismus.
    \item Die Exponentialfunktion von $(\R,+)$ auf $(\R,\cdot)$.
    \item Sei $W$ die freie Halbgruppe über einem Alphabet $A$ und $w\in W$ mit
-    $w=a_{1},\dotsc, a_{n}, a_{1},\dotsc, a_{n}\in A$. Die Funktion
+    $w=a_{1},\dotsc, a_{n}$ und $a_{1},\dotsc, a_{n}\in A$. Die Funktion
     $l(w)\coloneq n$ ist die Länge des Wortes. Dann ist $l\colon
     W\rightarrow(\N,+)$ ein Homomorphismus.
   \end{enumerate}
@@ -571,8 +571,8 @@ Codierungstheorie, \textsc{Banach}räume etc.
     g(f(a)f(b))= g(f(a))g(f(b))= (g\circ f)(a)\cdot(g\circ f)(b)$ für $a,b\in
     L$.
    \item Sei $f$ ein Isomorphismus. Dann ist $f^{-1}$ ebenfalls ein
-    Isomorphismus. Denn $f^{-1}(xy)=f^{-1}(f(f^{-1}(x)) f(f^{-1}(y)))=
-    f^{-1}(f(f^{-1}(x)f^{-1}(y)))= f^{-1}(x)f^{-1}(y)$.
+    Isomorphismus. Denn $f^{-1}(xy)=f^{-1}(f(f^{-1}(x))\cdot f(f^{-1}(y)))=
+    f^{-1}(f(f^{-1}(x)\cdot f^{-1}(y)))= f^{-1}(x)f^{-1}(y)$.
   \end{enumerate}
 \end{bemerk}
 
@@ -648,7 +648,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 	 \end{pmatrix}
     \end{gather*}
    \item Sei $K$ ein Körper und $n\in\N$. Dann ist $U(K^{n\times n},
-    \cdot)=\{A\in K^{n\times n}\colon\det A\neq0\}=\GL(n,K)$.
+    \cdot)=\{A\in K^{n\times n}\colon\det A\neq0\}=\colon\GL(n,K)$.
    \item Für jede nichtleere Familie $(G_{i})_{i\in I}$ von Gruppen $G_{i}$.
     Dann ist auch das \highl[Produkt!direktes]{direkte Produkt} $\prod_{i\in
     I} G_{i}= \bigtimes_{i\in I}G_{i}= \{(g_{i})_{i\in I}\colon g_{i}\in G_{i}
@@ -661,7 +661,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 
 %def 2.2
 \begin{defini}[Ordnung]
-  Die \highl{Ordnung} $\abs{G}$ einer Gruppe ist die Anzahl der Elemente.
+  Die \highl{Ordnung} $\abs{G}$ einer Gruppe ist die Anzahl ihrer Elemente.
 \end{defini}
 
 \begin{satz}
@@ -753,7 +753,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   X,y\in Y\}$ und $X^{-1}\coloneq\{x^{-1}\colon x\in X\}$.
 \end{defini}
 
-\begin{bemerk}
+\begin{bemerk}\label{bem:32}
   Dann ist $(X^{-1})^{-1}=X, (XY)^{-1}= Y^{-1}X^{-1}, (XY)Z=X(YZ)$ für
   $X,Y,Z\subseteq G$. Der \autoref{satz:24} besagt: $X\leq G\Leftrightarrow
   X\neq\emptyset\wedge XX^{-1}\subseteq X$.
@@ -776,12 +776,14 @@ Codierungstheorie, \textsc{Banach}räume etc.
       $uv\in U$ sein und $v=u^{-1}uv\in U$. Daher ist $V\subseteq U$.\\
       "`$\Leftarrow$"' ist trivial.
      \item $UV\leq G\Rightarrow(UV)=(UV)^{-1}= V^{-1}U^{-1}=VU$ und für
-      $UV=VU$ folgt: $(UV)(UV)^{-1}= UVV^{-1}U^{-1}\subseteq UVU=UUV=UV$.
+      $UV=VU$ folgt: $(UV)(UV)^{-1}= UVV^{-1}U^{-1}\subseteq UVU$ nach
+      \autoref{bem:32} und wegen der Kommutativität gilt: $UVU=UUV=UV$.
       Somit ist $UV$ eine Untergruppe.
      \item Sei $U\subseteq W$ und $w\in UV\cap W$. Wir schreiben $w=uv$ mit
       $u\in U$ und $v\in V$. Dann ist $v=u^{-1}w\in W$, d.\,h. $w=uv\in
       U(V\cap W)$. Umgekehrt ist $U(V\cap W) \subseteq UV$ $U(V\cap
       W)\subseteq WW\subseteq W$, d.\,h. $U(V\cap W)\subseteq UV\cap W$.
+      \todo{Klarer formulieren}
     \end{enumerate}
   \end{proof}
 \end{satz}
@@ -789,7 +791,11 @@ Codierungstheorie, \textsc{Banach}räume etc.
 %def 2.6
 \begin{defini}[erzeugte Untergruppe]\label{def:26}
   Für jede nichtleere Familie $(U_{i})_{i\in I}$ von Untergruppen $U_{i}$
-  einer Gruppe $G$ gilt stets: $\bigcap_{i\in I} U_{i}\leq G$. Insbesondere
+  einer Gruppe $G$ gilt stets:
+  \begin{gather*}
+    \bigcap_{i\in I} U_{i}\leq G
+  \end{gather*}
+  Insbesondere
   ist für $X\subseteq G$ der Durchschnitt $D$ aller Untergruppen $U\leq G$ mit
   $X\subseteq U$ eine Untergruppe von $G$. Man nennt $D=\colon\langle
   X\rangle$ die von $X$ \highl[Untergruppe!erzeugte]{erzeugte Untergruppe} von
