--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -4362,7 +4362,7 @@ Es geht um Verallgemeinerungen des Satzes von \textsc{Sylow}.
 \end{satz}
 
 %satz 13.3
-\begin{satz}[Satz von \textsc{Schur}"~\textsc{Zassenhaus}]
+\begin{satz}[Satz von \textsc{Schur}"~\textsc{Zassenhaus}]\label{satz:133}
   Seien $G$ eine endliche Gruppe, $\pi\subseteq\PP$ und $N\in\Hall_{\pi}(G)$
   normal. Dann ist $\Hall_{\pi'}(G)\neq\emptyset$. Ist $N$ oder $G/N$
   auflösbar, so gilt, $H_{1}\sim H_{2}$ für $H_{1}, H_{2}\in\Hall_{\pi'}(G)$.
@@ -4376,11 +4376,48 @@ Es geht um Verallgemeinerungen des Satzes von \textsc{Sylow}.
     $\pi$"~Hallgruppe von $N_{G}(P)$ ist auch eine von $G$. Daher sei \OE
     $G=N_{G}(P)$, d.\,h. $P\unlhd G$. Wegen $p\neq1$ ist $1\neq Z(P)\unlhd G$
     und $N/Z(P)\in\Hall_{\pi}(G/Z(P))$ normal. Nach Induktion existiert eine
-    Untergruppe $U/Z(P)\in\Hall_{\p'i}(G/Z(P))$. Dann ist das Zentrum von $P$
+    Untergruppe $U/Z(P)\in\Hall_{\pi'}(G/Z(P))$. Dann ist das Zentrum von $P$
     eine normale und abelsche $\pi$"~Hallgruppe von $U$. Nach
-    \autoref{satz:132} existiert ein $H\in\Hall_{\p'i}(U)$. Wegen $\abs{H}=
+    \autoref{satz:132} existiert ein $H\in\Hall_{\pi'}(U)$. Wegen $\abs{H}=
     \abs{U\colon Z(P)}= \abs{G/Z(P)\colon N/Z(P)}= \abs{G\colon N}$ ist
-    $H\in\Hall_{\p'i}(G)$.
+    $H\in\Hall_{\pi'}(G)$.
+
+    %Vorlesung vom 2009-06-30
+    Nun müssen wir uns Gedanken zur Eindeutigkeit machen. Hierzu führen wir
+    eine Induktion über die Gruppenordnung durch. Seien
+    $H,H^{*}\in\Hall_{\pi'}(G)$.  Insbesondere ist $\abs{G}= \abs{G\colon N}=
+    \abs{H^{*}}$. Nun sei \OE $N\neq1$. Zunächst nehmen wir an, dass $N$
+    auflösbar ist und $n\in\N_{0}$ mit $N^{(n)}\neq1=N^{(n+1)}$ ist. Dann ist
+    $N^{(n)}\unlhd G$ und $N/N^{(n)}\in\Hall_{\pi}(G/N^{(n)})$ normal. Ferner:
+    $HN^{(n)}/N^{(n)}, H^{*}N^{(n)}/N^{(n)}\in\Hall_{\pi'}(G/N^{(n)})$. Nach
+    Induktion existiert ein $gN^{(n)}\in G/N^{(n)}$ mit
+    \begin{gather*}
+      H^{*}N^{(n)}/N^{(n)}= (gN^{(n)})(HN^{(n)}/N^{(n)})(gN^{(n)})^{-1}=
+	 (gHg^{-1})N^{(n)}/N^{(n)}
+    \end{gather*}
+    Das heißt, $H^{*}N^{(n)}= (gHg^{-1})N^{(n)}$. Daher: $H^{*},
+    gHg^{-1}\in\Hall_{\pi'}(H^{*}N^{(n)})$. Nach \autoref{satz:132} sind
+    $H^{*}, gHg^{-1}$ in $H^{*}N^{(n)}$ konjugiert und wir sind in diesem Fall
+    fertig.
+
+    Sei nun also $G/N$ auflösbar und \OE $G/N\neq1$. Sei $M/N$ ein minimaler
+    Normalteiler von $G/N$. Dann ist $M/N$ charakteristisch einfach, also
+    abelsche $p$"~Gruppe für ein $p\in\pi'$. Ferner: $H\cap
+    M\in\Hall_{\pi'}(M)$ und $(H\cap M)N/N\in\Hall_{\pi'}(M/N)$. Da $M/N$ eine
+    $\pi'$"~Gruppe ist, folgt, $(H\cap M)N/N=M/N$ und $(H\cap M)N=M$.
+    Insbesondere $H\cap M\cong H\cap M/H\cap M\cap N\cong(H\cap M)N/N= M/N$,
+    d.\,h. $H\cap M\in\Syl_{p}(M)$ abelsch. Analog: $H^{*}\cap
+    M\in\Syl_{p}(M)$. Nach \textsc{Sylow}\todo{Link einfügen} existiert ein
+    $m\in M$ mit $H\cap M=m(H^{*}\cap M)m^{-1}= mH^{*}m^{-1}\cap M$. Daher ist
+    $H, H^{**}\coloneq mH^{*}m^{-1}\in\Hall_{\pi'}(U)$ für $U\coloneq
+    N_{G}(H\cap M)$. Außerdem haben wir $\abs{U\colon U\cap N}= \abs{UN/N}
+    \mid\abs{G\colon N}$, d.\,h. $U\cap N\in\Hall_{\pi}(U)$ normal. Im Fall
+    $U<G$ gilt nach Induktion: $H\sim_{U}H^{**}$ und wir sind fertig.
+
+    Sei daher $U=G$, d.\,h. $P\coloneq H\cap M\unlhd G$. Dann
+    $NP/P\in\Hall_{\pi}(G/P)$ normal und $H/P, H^{**}/P\in\Hall_{\pi'}(G/P)$.
+    Nach Induktion ist $H/P\sim_{G/P}H^{**}/P$, also auch $H\sim_{G}H^{**}$.
+    Damit gilt auch $H\sim_{G}H^{*}$.
   \end{proof}
 \end{satz}
 
@@ -4391,6 +4428,68 @@ Es geht um Verallgemeinerungen des Satzes von \textsc{Sylow}.
   überflüssig. Der Beweis der Tatsache \emph{ohne} Verwendung des Satzes von
   \textsc{Feit}"~\textsc{Thompson} ist bis heute unbekannt. 
 \end{bemerk}
+
+%satz 13.4
+\begin{satz}[Satz von \textsc{Hall}]
+  Für jede auflösbare endliche Gruppe $G$ und alle $\pi\subseteq\PP$ gilt:
+  \begin{enumerate}
+   \item $G$ hat ein $\pi$"~Hallgruppe.
+   \item Je zwei $\pi$"~Hallgruppen von $G$ sind konjugiert.
+   \item Jede $\pi$"~Untergruppe von $G$ ist in einer $\pi$"~Hallgruppe von
+    $G$ enthalten.
+  \end{enumerate}
+  \begin{proof}
+    Der Beweis wird wie schon in den obigen Aussagen per Induktion nach der
+    Gruppenordnung durchgeführt. \OE sei $G\neq1$ und $N$ ein minimaler
+    Normalteiler von $G$. Dann ist $N$ eine abelsche $p$"~Gruppe für ein
+    $p\in\PP$.
+    \begin{enumerate}
+     \item Da $G/N$ auflösbar ist, existiert nach Induktion ein
+      $H/N\in\Hall_{\pi}(G/N)$. Im Fall $p\in\pi$ ist $H\in\Hall_{\pi}(G)$.
+      Sei also $p\notin\pi$. Dann: $N\in\Syl_{p}(H)$ normal. Nach dem Satz von
+      \textsc{Schur}"~\textsc{Zassenhaus} (\autoref{satz:133}) existiert ein
+      $K\in\Hall_{\pi'}(N)$. Dann: $K\in\Hall_{\pi}(H)$ und
+      $K\in\Hall_{\pi}(G)$.
+     \item Hier ist gleich der Beweis der dritten Aussage mit eingeschlossen.
+      Seien $U$ eine $\pi$"~Untergruppe von $G$ und $H\in\Hall_{\pi}(G)$. Wir
+      zeigen, dass ein $g\in G$ mit $U\subseteq gHg^{-1}$ existiert. Offenbar
+      ist $UN/N\cong U/U\cap N$ eine $\pi$"~Untergruppe von $G/N$ und
+      $HN/N\in\Hall_{\pi}(G/N)$. Nach Induktion existiert ein $xN\in G/N$ mit
+      $UN/N\subseteq(xN)(HN/N)(xN)^{-1}= (xHx^{-1})N/N$, d.\,h. $U\subseteq
+      UN\subseteq(xHx^{-1})N$. Offenbar ist $U$ eine $\pi$"~Untergruppe von
+      $(xHx^{-1})N$ und $xHx^{-1}\in\Hall_{\pi}((xHx^{-1})N)$. Im Fall
+      $(xHx^{-1})N<G$ existiert also nach Induktion ein $y\in(xHx^{-1})N$ mit
+      $U\subseteq yxHx^{-1}y^{-1}$ und wir sind fertig.
+
+      Sei also $G= (xHx^{-1})N= xHNx^{-1}$, also auch $G=HN$. Im Fall
+      $p\in\pi$ ist $G$ eine $\pi$"~Gruppe, also $G=H$ und die Behauptung ist
+      trivial. Daher sei $p\in\pi'$. Dann: $N\in\Syl_{p}(NU)$ normal und
+      $U\in\Hall_{\pi'}(NU)$. Andererseits ist $\abs{NU\cap H}= \frac{\abs{NU}
+      \abs{H}}{\abs{NUH}}= \frac{\abs{N} \abs{U} \abs{H}}{\abs{G}}=\abs{U}$,
+      d.\,h. $NU\cap H\in\Hall_{\pi'}(NU)$. Nach dem Satz von
+      \textsc{Schur}"~\textsc{Zassenhaus} existiert ein $g\in NU$ mit $U=
+      g(NU\cap H)g^{-1}\subseteq gHg^{-1}$.
+     \item Siehe Beweis zum oben stehenden Punkt.
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  \textsc{P.\,Hall} hat auch bewiesen, dass umgekehrt jede endliche Gruppe $G$
+  mit $\Hall_{\pi}(G)\neq\emptyset$ für alle $\pi\subseteq\PP$ auflösbar ist.
+  Der Beweis verwendet den $p^{a}q^{b}$"~Satz von \textsc{Burnside}.
+\end{bemerk}
+
+%satz 13.5
+\begin{satz}[Satz von \textsc{O.\,Schmidt}]
+  Für jede endliche nichtnilpotente Gruppe $G$, in der jede echte Untergruppe
+  nilpotent ist, gilt:
+  \begin{enumerate}
+   \item $G$ ist auflösbar.
+   \item Es existieren $p,q\in\PP$ derart, dass $G$ eine $\{p,q\}$"~Gruppe mit
+    einer zyklischen $p$"~Sylowgruppe und einer normalen $q$"~Sylowgruppe ist.
+  \end{enumerate}
+\end{satz}
 
 
 \clearpage
