Teil der Vorlesung vom 2009-07-09
Kapitel über Verlagerungen vervollständigt

git-svn-id: https://svn.lug-jena.de/uni-skripte@2165 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -4249,7 +4249,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \end{satz}
 
 \chapter{Hallgruppen}
->Es geht um Verallgemeinerungen des Satzes von \textsc{Sylow}.
+Es geht um Verallgemeinerungen des Satzes von \textsc{Sylow}.
 %def 13.1
 \begin{defini}
   Sei $\pi\subseteq\PP$ und $\pi'\coloneq\PP\setminus\pi$. Eine endliche
@@ -4556,6 +4556,84 @@ Codierungstheorie, \textsc{Banach}räume etc.
 
 \todo[inline]{fehlende Vorlesungen einfügen}
 
+\chapter{Die Verlagerung}
+
+%bem 15.1
+\begin{bemerk}
+  Sei $G$ eine endliche Gruppe und $K\unlhd H\leq G$ derart, dass $H/K$
+  abelsch ist. Schließlich sei $R$ ein Repräsentantensystem für $G/H$, d.\,h.
+  $G=\dotcup_{r\in R} rH$. Dann existieren für $g\in G$ und $r\in R$ eindeutig
+  bestimmte Elemente $\rho_{g}(r)\in R, \eta_{g}(r)\in H$ mit $gr= \rho_{g}(r)
+  \eta_{g}(r)$. Wir setzen als \highl{Verlagerung}:
+  \begin{gather*}
+    V^{G}_{H/K}(g)\coloneq\prod_{r\in R} \eta_{g}(r)K\in H/K
+  \end{gather*}
+  Da $H/K$ abelsch ist, kommt es bei dem Produkt nicht auf die Reihenfolge an.
+\end{bemerk}
+
+\begin{satz}
+  Die so definierte Abbildung $V^{G}_{H/K}\colon G\rightarrow H/K$ ist
+  unabhängig von $R$ und ein Homomorphismus.
+  \begin{proof}
+    Jedes weitere Repräsentantensystem für $G/H$ hat die Form
+    \begin{gather*}
+      R'=\{rh_{r}\colon r\in R\}
+    \end{gather*}
+    Für $g\in G, r\in R$ ist $grh_{r}= \rho_{g}(r)\eta_{g}(r)h_{r}=
+    \underbrace{\rho_{g}(r)h_{\rho_{g}(r)}}_{=\colon\rho_{g}'(r)\in R'}
+    \underbrace{h_{\rho_{g}^{-1}(r)}\eta_{g}(r)}_{=\colon\eta_{g}'(r)\in H}$.
+    Da $H/K$ abelsch ist und $R\rightarrow R, r\mapsto\rho_{g}(r)$ für $g\in
+    G$ eine bijektive Abbildung ist, gilt:
+    \begin{align*}
+      \prod_{r\in R} \eta_{g}'(rh_{r})K &= \prod_{r\in
+	 R}h_{\eta_{g}(r)}^{-1}h_{r}K  = \prod_{r\in R} \eta_{g}(r)K
+    \end{align*}
+    Für $f,g\in G, r\in R$ gilt ferner: $\underbrace{\rho_{fg}(r)}_{\in R}
+    \underbrace{\eta_{fg}(r)}_{\in H}= fgr= f\rho_{g}(r) \eta_{g}(r)=
+    \underbrace{\rho_{f}(\rho_{g}(r))}_{\in R}
+    \underbrace{\eta_{f}(\eta_{g}(r))}_{\in H}$, d.\,h. $\eta_{fg}(r)=
+    \eta_{f}(\rho_{g}(r))\eta_{g}(r)$. Daher gilt $V^{G}_{H/K}(fg)=
+    \prod_{r\in R} \eta_{fg}(r)K= \prod_{r\in R} \eta_{f}(\rho_{g}(r))K
+    \prod_{r\in R} \eta_{g}(r)= V^{G}_{H/K}(f)= V^{G}_{H/K}(g)$
+  \end{proof}
+\end{satz}
+
+\begin{defini}[Verlagerung]
+  Die Abbildung $V^{G}_{H/K}$ heißt \highl{Verlagerung}\footnote{vom
+  englischen Wort "`transfer"'} von $G$ nach $H/K$.
+\end{defini}
+
+Beachte: In der Regel ist $\abs{H/K}<G$. Daher ist die Verlagerung
+typischerweise \emph{nicht} injektiv. Aber $G/G'$ ist stets abelsch.
+
+%bem 15.2
+\begin{bemerk}
+  Sei $G$ eine endliche Gruppe und $K\unlhd H\leq G$ derart, dass $H/K$
+  abelsch ist. Weiterhin sei $g\in G$. Zur Berechnung von $V^{G}_{H/K}(g)$
+  wählen wir ein Repräsentantensystem für $G/H$, das von $g$ abhängt.
+
+  Auf $G/H$ operiert $\langle g\rangle$ durch Linksmultiplikation. Die Bahnen
+  seien $\Delta_{1},\dotsc,\Delta_{s}$. Wähle
+  $r_{1}H\in\Delta_{1},\dotsc,r_{s}H\in \Delta_{s}$. Ist $i\in\{1,\dotsc,s\}$
+  und $d_{i}\coloneq\abs{\Delta_{i}}$, so ist $d_{i}$ ein Teiler von
+  $\abs{\langle g\rangle}$ und
+  \begin{gather*}
+    \Delta_{i}= \{r_{i}H, gr_{i}H,
+       g^{2}r_{i}H,\dotsc,g^{d_{i}-1}r_{i}H\}\qquad g^{d_{i}}r_{i}H=r_{i}H
+  \end{gather*}
+
+  Folglich  ist $R\coloneq\{r_{1}, gr_{1}, g^{2}r_{1},\dotsc,
+  g^{d_{1}-1}r_{1},\dotsc, r_{s}, gr_{s}, g^{2}r_{s},\dotsc,
+  g^{d_{s}-1}r_{s}\}$ ein Repräsentantensystem für $G/H$ und $V^{G}_{H/K}(g)=
+  \prod_{i=1}^{s} r_{i}^{-1}g^{d_{i}}r_{i}K$ mit $d_{i}+\dotsb+ d_{s}=
+  \abs{G\colon H}, r_{i}^{-1}g^{d_{i}}r_{i}\in H$. "`Oft"' ist
+  $r_{i}^{-1}g^{d_{i}}_{i}= g^{g_{i}}$ für $i=1,\dotsc,s$, also
+  \begin{gather*}
+    V^{G}_{H/K}(g)= g^{\abs{G\colon H}}K
+  \end{gather*}
+\end{bemerk}
+
+\todo[inline]{Fehlt hier noch was?}
 
 %Vorlesung vom 2009-07-14
 %def 15.3
