Beweis zum Satz von Wielandt ergänzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2166 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -4482,7 +4482,7 @@ Es geht um Verallgemeinerungen des Satzes von \textsc{Sylow}.
 \end{bemerk}
 
 %satz 13.5
-\begin{satz}[Satz von \textsc{O.\,Schmidt}]
+\begin{satz}[Satz von \textsc{O.\,Schmidt}]\label{satz:135}
   Für jede endliche nichtnilpotente Gruppe $G$, in der jede echte Untergruppe
   nilpotent ist, gilt:
   \begin{enumerate}
@@ -4549,8 +4549,28 @@ Es geht um Verallgemeinerungen des Satzes von \textsc{Sylow}.
   nilpotent. Dann existiert zu jeder $\pi$"~Untergruppe $U\leq G$ ein $g\in G$
   mit $U\leq gHg^{-1}$.
   \begin{proof}
-    Der Beweis wird per Induktion nach $\abs{U}$ durchgeführt und \todo{muss
-    ergänzt werden}
+    Der Beweis wird per Induktion nach $\abs{U}$ durchgeführt. Sei \OE
+    $U\neq1$. Nach Induktion existiert zu jeder Untergruppe $V<U$ ein $g\in G$
+    mit $V\subseteq gHg^{-1}$. Dann sind $gHg^{-1}\cong H$ und $V$ nilpotent.
+
+    Ist $U$ nicht nilpotent, so existiert nach \autoref{satz:135} ein
+    $q\in\PP$ und $Q\in\Syl_{q}(U)$ mit $1\neq Q\unlhd U$ und $U/Q$ ist eine
+    endliche $p$"~Gruppe für ein $p\in\PP\setminus\{q\}$.
+
+    Ist $U$ nilpotent und $p\in\PP$ mit $p\mid \abs{U}$ sowie
+    $P\in\Syl_{p}(U)$, so existiert ein $Q\unlhd U$ mit $U=P\oplus Q$.
+
+    In beiden Fällen ist $Q\unlhd U$. Mit $\rho\coloneq\pi\setminus\{p\}$ ist
+    $Q$ eine $\rho$"~Untergruppe von $G$. Da $H$ nilpotent ist, existiert eine
+    Zerlegung $H= H_{1}\oplus H_{2}$ mit $H_{1}\in\Syl_{p}(H)$. Dann ist
+    $H_{2}\in\Hall_{\rho}(H)\subseteq\Hall_{\rho}(G)$. Nach Induktion
+    existiert ein $x\in G$ mit $Q\subseteq xH_{2}x^{-1}$. Insbesondere
+    $N_{G}(Q)\geq\langle xH_{1}x^{-1}, U\rangle$. Offenbar:
+    $xH_{1}x^{-1}\in\Syl_{p}(G)$ und $xH_{1}x^{-1}\in\Syl_{p}(N_{G}(Q))$. Zu
+    der $p$"~Untergruppe $P\leq N_{G}(Q)$ existiert also ein $y\in N_{G}(Q)$
+    mit $P\subseteq y(xH_{1}x^{-1})y^{-1}$. Wegen $Q=yQy^{-1}\subseteq
+    yxH_{2}x^{-1}y^{-1}$ ist $U=P\oplus Q\subseteq yxH_{1}x^{-1}y^{-1}\cdot
+    yxH_{2}x^{-1}y^{-1}\subseteq yxH_{1}H_{2}x^{-1}y^{-1}= yxHx^{-1}y^{-1}$.
   \end{proof}
 \end{satz}
 
