Teil der Vorlesung vom 2009-07-07
Lineare Gruppen, projektive (allgemeine, spezielle) lineare Gruppen

git-svn-id: https://svn.lug-jena.de/uni-skripte@2168 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -120,6 +120,7 @@
 
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
 \newcommand*{\C}{\mathbb{C}}      % komplexe Zahlen
+\newcommand*{\KK}{\mathbb{K}}     % Körper
 \newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
 \newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
@@ -181,6 +182,8 @@
 % math. Operatoren
 \DeclareMathOperator{\GL}{GL}             % allgemeine lineare Gruppe
 \DeclareMathOperator{\SL}{SL}             % spezielle lineare Gruppe
+\DeclareMathOperator{\PGL}{PGL}             % projektive allgemeine lineare Gruppe
+\DeclareMathOperator{\PSL}{PSL}             % projektive spezielle lineare Gruppe
 \DeclareMathOperator{\Sym}{Sym}           % symmetrische Gruppe
 \DeclareMathOperator{\Alt}{Alt}           % alternierende Gruppe
 \DeclareMathOperator{\Aut}{Aut}           % Automorphismus
@@ -202,7 +205,7 @@
 \DeclareMathOperator{\Orb}{Orb}           % Orbit, Bahn
 \DeclareMathOperator{\Syl}{Syl}           % Sylowgruppe
 \DeclareMathOperator{\sgn}{sgn}           % Signum
-\DeclareMathOperator{\Hall}{Hall}
+\DeclareMathOperator{\Hall}{Hall}         % Hallgruppe
 \DeclareMathOperator{\Foc}{Foc}           % Fokalgruppe
 
 
@@ -4662,6 +4665,67 @@ Es geht um Verallgemeinerungen des Satzes von \textsc{Sylow}.
     O_{\pi'}(G)=1$.
   \end{proof}
 \end{satz}
+
+
+%Vorlesung vom 2009-07-07
+\chapter{Lineare Gruppen}
+
+%satz 14.1
+\begin{satz}Lemma von \textsc{Iwasawa}]
+  Sei $G$ eine perfekte Gruppe, $\underline{O}$ eine treue, primitive $G$"~Menge,
+  $\alpha\in \underline{O}$ und $A$ ein auflösbarer Normalteiler von
+  $H\coloneq\Stb_{G}(\alpha)$ mit $G=\langle gAg^{-1}\colon g\in G\rangle$.
+  Dann ist $G$ einfach.
+  \begin{proof}
+    Sei $1\lhd N\unlhd G$. Da $G$ treu und primitiv auf $\underline{O}$
+    operiert, ist $N$ transitiv auf $\underline{O}$. Nach dem Argument von
+    \textsc{Frattini} ist also $G= NH$. Wegen $A\unlhd H$ ist $H\subseteq
+    N_{G}(NA)$. Wegen $NA\subseteq N_{G}(NA)$ ist $G= NH\subseteq
+    N_{G}(NA)\subseteq G$, d.\,h. $NA\unlhd G$. Daher:
+    \begin{gather*}
+      G= \langle gAg^{-1}\colon g\in G\rangle= \langle gNAg^{-1}\colon g\in
+	 G\rangle= NA
+    \end{gather*}
+    Folglich: $G/N= AN/N\cong A(A\cap N)$ auflösbar. Andererseits ist $(G/N)'=
+    G'N/N=G/N$. Insgesamt haben wir $G/N=1$, d.\,h. $N=G$.
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item  Seien $\KK$ ein Körper und $V$ ein endlich"=dimensionaler $\KK$"~Vektorraum.
+  Dann gilt:
+  \begin{gather*}
+    Z\coloneq\{\alpha\id_{V}\colon\alpha\in\KK^{*}\}\subseteq Z(\GL(V))
+  \end{gather*}
+  Denn für $g\in\GL(V), \alpha\in\KK^{*}, v\in V$ gilt:
+  $(g(\alpha\id_{V})g^{-1})(v)= g(\alpha g^{-1}(v))= \alpha g(g^{-1}(v))=
+  (\alpha\id_{V})(v)$. Man nennt $\PGL(V)\coloneq\GL(V)/Z$
+  \highl[Gruppe!projektive allgemeine lineare]{projektive allgemeine lineare
+    Gruppe} von $V$.
+
+   \item Aus (i) folgt: $Z\cap\SL(V)= \{\alpha\id_{V}\colon\alpha\in\KK,
+    \alpha^{\dim V}=1\}\leq Z(\SL(V))$. Man nennt
+    $\PSL(V)\coloneq\SL(V)/(\SL(V)\cap Z)\cong\SL(V)Z/Z\leq\PGL(V)$ die
+    \highl[Gruppe!projektive spezielle lineare Gruppe]{projektive spezielle
+      lineare Gruppe} von $V$.
+   \item Für $n\in\N$ ist also
+    $Z\coloneq\{\alpha1_{n}\colon\alpha\in\KK^{*}\}\leq Z(\GL(n,\KK))$ und
+    $\GL(n,\KK)/Z=\colon\PGL(n,\KK)$ heißt \highl[Gruppe!projektive allgemeine
+    lineare Gruppe]{projektive allgemeine lineare Gruppe} des Grades $n$ über
+    $\KK$.
+   \item Daher ist $Z\cap\SL(n,\KK)= \{\alpha1_{n}\colon\alpha\in\KK,
+    \alpha^{n}=1\}\leq Z(\SL(n,\KK))$ und
+    $\PSL(n,\KK)\coloneq\SL(n,\KK)/\SL(n,\KK)\cap Z$ heißt
+    \highl[Gruppe!projektive spezielle lineare]{projektive spezielle lineare
+      Gruppe} de Grades $n$ über $\KK$.
+   \item Für jeden $\KK$"~Vektorraum $V$ der Dimension $n<\infty$ gilt:
+    \begin{align*}
+      \GL(V) &\cong\GL(n,\KK) & \SL(V) &\cong\SL(n,\KK)\\
+      \PGL(V) &\cong\PGL(n,\KK) & \PSL(V) &\cong\PSL(n,\KK)
+    \end{align*}
+  \end{enumerate}
+\end{bemerk}
 
 \todo[inline]{fehlende Vorlesungen einfügen}
 
