--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -39,7 +39,7 @@
                                        % amsmath-Umgebungen z.\,B. $$...$$
 \usepackage{amssymb}     % wird für \R, \C,... gebraucht
 \usepackage{fixmath}     % ISO-konforme griech. Buchstaben
-%\usepackage[euro]{isonums} % definiert Komma als Dezimaltrennzeichen
+\usepackage[euro]{isonums} % definiert Komma als Dezimaltrennzeichen
 
 \usepackage[amsmath,thmmarks,hyperref]{ntheorem} % für die Theorem-Umgebungen
                                                  % (satz, defini, bemerk)
@@ -63,6 +63,7 @@
 \usepackage{tikz}
 \usepackage{wasysym}
 \usepackage[final]{pdfpages}
+\usepackage{xypic}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -4595,7 +4596,12 @@ Es geht um Verallgemeinerungen des Satzes von \textsc{Sylow}.
     Sei \OE $M\neq G$.  Da $M$ charakteristisch einfach ist, ist $M$ eine
     abelsche $p$"~Gruppe für ein $p\in\PP$. Sei $N/M$ ein minimaler
     Normalteiler von $G/M$.
-    \missingfigure{G,-\- N -$\q^{y}$- M -$\p^{x}$- 1}
+    \begin{gather*}
+      \xymatrix{G \ar[dr] & & & \\
+                          & N \ar[dr]^{q^{y}} & & \\
+                          & & M \ar[dr]^{p^{x}} & \\
+                          & & & 1}
+    \end{gather*}
     Dann ist $N/M$ eine abelsche $q$"~Gruppe für ein $q\in\PP$. Im Fall $p=q$
     wäre $N$ eine $p$"~Gruppe, also nilpotent. Folglich wäre $1\neq Z(N)\cap
     M\unlhd G$, also $M=Z(N)\cap M\subseteq Z(N)$ nach der Wahl von $M$. Dann
@@ -4852,11 +4858,12 @@ typischerweise \emph{nicht} injektiv. Aber $G/G'$ ist stets abelsch.
   \end{proof}
 \end{satz}
 
-\missingfigure{G ------------ H
-               |     ~        |
-               |  ----- >     |
-               | $V^{G}_{H/F}$|
-               N ------------ F}
+
+\begin{gather*}
+  \xymatrix{G \ar@{-}[rr] \ar@{-}[dd] & & H \ar@{-}[dd]\\
+            \ar[rr]^{\sim}_{V^{G}_{H/F}} & & \\
+            N \ar@{-}[rr] & & F}
+\end{gather*}
 
 \begin{bsp}
   Die oben geforderte Teilerfremdheit ist dann erfüllt, wenn $H$ eine
